# bevy-breakout-refactored

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/bundles/: ball_bundle.rs  brick_bundle.rs  mod.rs  paddle_bundle.rs  scoreboard_bundle.rs  wall_bundle.rs
src/components/: brick.rs  collider.rs  collision_sound.rs  mod.rs  paddle.rs  scoreboard.rs  velocity.rs
src/constants/: background.rs  ball.rs  brick.rs  mod.rs  paddle.rs  scoreboard.rs  text.rs  wall.rs
src/events/: collision_event.rs  mod.rs
src/resources/: collision_sound.rs  mod.rs  scoreboard.rs
src/states/: app_state.rs  mod.rs
src/systems/: apply_velocity.rs  check_for_collisions.rs  mod.rs  move_paddle.rs  play_collision_sound.rs  setup.rs  setup_breakout.rs  update_scoreboard.rs
