[package]
name = "bevy-breakout-refactored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "autouse"
path = "src/lib.rs"

[dependencies]
bevy = "0.12.1"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
automod = "1.0.14"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
